--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "php": "^8.2",
     "illuminate/contracts": "^10.0||^11.0",
     "nunomaduro/termwind": "*",
-    "pdphilip/elasticsearch": "^4.0",
+    "pdphilip/elasticsearch": "^4.1.1",
     "spatie/laravel-package-tools": "^1.16"
   },
   "require-dev": {
@@ -59,10 +59,17 @@
       "@composer run build",
       "@php vendor/bin/testbench serve"
     ],
-    "analyse": "vendor/bin/phpstan analyse",
-    "test": "vendor/bin/pest",
-    "test-coverage": "vendor/bin/pest --coverage",
-    "format": "vendor/bin/pint"
+    "types": "phpstan analyse --ansi --memory-limit=2G",
+    "format": "pint -v",
+    "test-coverage": "pest --coverage",
+    "test:lint": "pint --test -v",
+    "test:types": "@types",
+    "test:unit": "pest --colors=always",
+    "test": [
+      "@test:lint",
+      "@test:types",
+      "@test:unit"
+    ]
   },
   "config": {
     "sort-packages": true,
