--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   "require": {
     "php": "^8.2",
     "illuminate/contracts": "^10.0||^11.0",
-    "nunomaduro/termwind": "*",
-    "pdphilip/elasticsearch": "^4.1.1",
+    "pdphilip/elasticsearch": "^4.2",
+    "pdphilip/omniterm": "^1.0",
     "spatie/laravel-package-tools": "^1.16"
   },
   "require-dev": {
