--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "illuminate/contracts": "^10.0||^11.0",
     "pdphilip/elasticsearch": "^4.4",
     "pdphilip/omniterm": "^1.0",
+    "pdphilip/cf-request": "^1.0",
     "spatie/laravel-package-tools": "^1.16"
   },
   "require-dev": {
